fixing width by removing scrollbar

--- a/assets/css/src/newsletter_templates.styl
+++ b/assets/css/src/newsletter_templates.styl
@@ -5,5 +5,5 @@
   z-index: -9999
   top: 0
   left: 0
-  width: $newsletter-width + 20
-  max-width: $newsletter-width + 20
+  width: $newsletter-width
+  max-width: $newsletter-width
